--- a/medial-queries2/main2.css
+++ b/medial-queries2/main2.css
@@ -19,34 +19,48 @@ body {
 
 .a, .f{
   width:98%;
-  min-height:19%;
+  min-height:19vh;
+  margin:1%;
 }
 
 .b {
   width:98%;
-  min-height: 49%;
+  min-height: 39vh;
+  margin:1%;
 }
 
 .c,.d,.e {
-  width:32%;
-  min-height: 19%;
+  width:30%;
+  min-height: 19vh;
+  margin:1%;
 }
 
-/* @media(min-width: 600px) {
+@media(min-width: 600px) {
   .container {
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
+    justify-content: flex-start
   }
 
   .a {
     width: 100%;
+    height:32vh;
+    flex-grow:2;
   }
 
   .b {
-    max-width: 78%;
+    max-width: 73%;
+    height:32vh;
   }
 
-  .c {
-    max-width: 20%;
+  .c, .d, .e {
+    max-width: 23%;
+    height:32vh;
   }
-} */
+
+  .f{
+   /* flex-direction: column; */
+    max-width:23%;
+    height: 64vh;
+  }
+}
