--- a/medial-queries2/main2.css
+++ b/medial-queries2/main2.css
@@ -1,5 +1,4 @@
-
-* {
+/* .container > *{
   border: 2px solid rgb(183, 227, 210);
 }
 
@@ -11,56 +10,110 @@ body {
 
 .container {
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
-  min-height: 100vh;
+  justify-content: space-evenly;
+  height: 100vh;
+  border: 2px solid hotpink;
 }
 
-.a, .f{
-  width:98%;
-  min-height:19vh;
-  margin:1%;
+.a,
+.f {
+  width: 98%;
+  min-height: 10%;
+
 }
 
 .b {
-  width:98%;
-  min-height: 39vh;
-  margin:1%;
+  width: 98%;
+  min-height: 30%;
+
 }
 
-.c,.d,.e {
-  width:30%;
-  min-height: 19vh;
-  margin:1%;
-}
+.c,
+.d,
+.e {
+  width: 32%;
+  min-height: 10%;
+} */
 
 @media(min-width: 600px) {
-  .container {
-    flex-direction: row;
-    flex-wrap:wrap;
-    justify-content: flex-start
+
+.container > *{
+  border: 2px solid rgb(183, 227, 210);
+}
+
+body {
+  background: rgb(53, 67, 78);
+  margin: 0;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 100vh;
+  border: 2px solid hotpink;
+}
+
+.a
+ {
+  width: 98%;
+  height: 30%;
+
+}
+
+.b {
+  width: 70%;
+  height: 30%;
+
+}
+
+.c,
+.d,
+.e {
+  align-self: flex-start;
+  width: 20%;
+  height: 30%;
+}
+
+.f{
+  width:20%;
+  height:60%;
+  /* flex-direction: column;
+  align-self:flex-end; */
+}
+
+
+  /* .container {
+   
+    justify-content: space-evenly;
   }
 
   .a {
-    width: 100%;
-    height:32vh;
-    flex-grow:2;
+    width: 75%;
+    height: 30%;
+    flex-grow: 1;
   }
 
   .b {
     max-width: 73%;
-    height:32vh;
+    height: 30%;
   }
 
-  .c, .d, .e {
+  .c,
+  .d,
+  .e {
+    flex-basis: 23%;
+    align-self:flex-end;
+    
+    height: 30%;
+  }
+
+  .f {
+    
     max-width: 23%;
-    height:32vh;
-  }
-
-  .f{
-   /* flex-direction: column; */
-    max-width:23%;
-    height: 64vh;
-  }
+    height: 60%;
+  } */
 }
